worked on part 4